fix: centre header and enforce a minimum height to prevent too short on mobile

--- a/src/components/header/page.module.css
+++ b/src/components/header/page.module.css
@@ -5,10 +5,12 @@
     width: 100dvw;
     max-width: var(--max-width);
     height: fit-content;
+    min-height: 2rem;
 
     position: fixed;
     top: 0;
-    left: 0;
+    left: 50%;
+    transform: translateX(-50%);
     z-index: 100;
 
     backdrop-filter: blur(1rem);
